sm-k8s/minikube/gateway/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sm-gateway
  namespace: production
spec:
  type: ClusterIP
  selector:
    app: sm-gateway
  ports:
  - name: gateway
    port: 4000
    targetPort: 4000
    protocol: TCP
